Got Swagger working!!!
